--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li>Kovács Péter</li>
             <li>Varga János</li>
+            <li>változtatás</li>
         </ul>
         <!-- 
             Bootrap elemek innentől:
