--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <li>Kovács Péter</li>
             <li>Varga János</li>
             <li>változtatás</li>
+            <li>változtatás2</li>
         </ul>
         <!-- 
             Bootrap elemek innentől:
